<resources>
    <string name="app_name">DistanceTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_txt">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker. In order to use our application we will first need to request location permission from you. Otherwise we will not be able to povide you with our service. If you agree, click button below to continue.</string>
    <string name="permission_required">Permission required</string>
    <string name="welcome_imageview">Welcome imageView</string>
    <string name="start">Start</string>
    <string name="tap_on_my_location_button">Tap on My Location Button</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="logo">Logo</string>
    <string name="distance_travelled">Distance travelled</string>
    <string name="time_elapsed">Time elapsed</string>
    <string name="share">share</string>
    <string name="extra_subject_header">My results from DistanceTracker App!</string>
    <string name="i_passed">I passed </string>
    <string name="in"> in</string>
</resources>